--- a/signin.html
+++ b/signin.html
@@ -33,7 +33,7 @@ const confirmPassword = document.getElementById('confirm_password').value;
 // Validate form fields
 if (username && email && password && confirmPassword) {
 if (password === confirmPassword) {
-window.location.href = 'main.html'; 
+window.location.href = 'index.html'; 
  URL
 } else {
 alert('Passwords do not match');
